2014-07-12  Paul Eggert  <eggert@cs.ucla.edu>

	* etags.c (Lisp_functions): Also record cl-defun etc. (Bug#17965)

2014-06-26  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (blessmail): Depend on lisp/mail/blessmail.el.
	Use $<, $@.
	(regex.o, etags${EXEEXT}, ctags${EXEEXT}, ebrowse${EXEEXT})
	(profile${EXEEXT}, make-docfile${EXEEXT}, movemail${EXEEXT})
	(pop.o, emacsclient${EXEEXT}, emacsclientw${EXEEXT}, ntlib.o)
	(hexl${EXEEXT}, update-game-score${EXEEXT}, emacsclient.res): Use $<.
	(ctags${EXEEXT}): Add $srcdir to dependency rather than using VPATH.

2014-06-17  Paul Eggert  <eggert@cs.ucla.edu>

	Omit redundant extern decls.
	* emacsclient.c (getenv): Remove decl.
	* make-docfile.c (write_globals): Add ATTRIBUTE_CONST for
	Fbyteorder, Ftool_bar_height, Fmax_char, Fidentity.

2014-06-15  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (LDFLAGS): Explicitly set via configure.

2014-06-15  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in (CPPFLAGS): Define.

2014-06-15  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (../lib/libgnu.a):
	Use `make -C' rather than `cd && make'.

	* Makefile.in (bootstrap-clean): New.

2014-06-13  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (../lib/libgnu.a):
	GNU make automatically passes command-line arguments to sub-makes.

2014-05-26  Eli Zaretskii  <eliz@gnu.org>

	* ntlib.h (lseek): Don't redirect to _lseek.

2014-05-26  Paul Eggert  <eggert@cs.ucla.edu>

	Fix rcs2log problems with CVS.
	Problem reported by Glenn Morris in
	<http://lists.gnu.org/archive/html/emacs-devel/2014-05/msg00277.html>.
	Plus, fix some security and filename quoting problems.
	* rcs2log (logdir): Prefer mktemp if available.
	(logdir, llogdir): Work even if TMPDIR begins with '-' or has spaces.
	(output_authors, main awk script): Parse more-recent CVS output format.

2014-05-19  Paul Eggert  <eggert@cs.ucla.edu>

	Remove dependencies on getline and getdelim.
	Also, remove update-game-scores's limits on game scores and
	simplify its file-locking code.